--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,11 @@
+#ioc,di
 scanPackage=com.zqr.study.spring.demo
+#springMVC
 templateRoot=view
+#aop
+aspectClass=com.zqr.study.spring.demo.aspect.LogAspect
+pointCut=public .* com.zqr.study.spring.demo.service..*Service..*(.*)
+aspectBefore=before
+aspectAfter=after
+aspectAfterThrow=afterThrow
+aspectAfterThrowingName=java.lang.Exception
