--- a/pom.xml
+++ b/pom.xml
@@ -31,5 +31,10 @@
             <artifactId>servlet-api</artifactId>
             <version>${servlet.api.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis</artifactId>
+            <version>3.5.1</version>
+        </dependency>
     </dependencies>
 </project>
